配置 VSCode 设置和项目脚本
- 更新 .vscode/settings.json 文件，添加 TypeScript、ESLint、Prettier 配置
- 修改 package.json，增加测试和故事书相关脚本

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,23 @@
 {
-    "cSpell.words": [
-        "lefthook",
-        "shadcn"
-    ]
+  "typescript.preferences.importModuleSpecifier": "non-relative",
+  "editor.formatOnSave": true,
+  "editor.codeActionsOnSave": [
+    "source.addMissingImports",
+    "source.fixAll.eslint"
+  ],
+  "editor.formatOnSaveMode": "modifications",
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "editor.indentSize": "tabSize",
+  "editor.tabSize": 2,
+  "editor.detectIndentation": false,
+  "eslint.useFlatConfig": true,
+  "files.eol": "\n",
+  "workbench.editor.customLabels.patterns": {
+    "**/app/**/{*.tsx,route.ts,actions.ts}": "${dirname(1)}/${dirname} ∙ ${filename}",
+    "**/src/**/{*.tsx,*.ts}": "${dirname}/${filename}.${extname}"
+  },
+  "files.associations": {
+    "*.css": "tailwindcss"
+  },
+  "cSpell.words": ["lefthook", "shadcn"]
 }
