--- a/package.json
+++ b/package.json
@@ -6,7 +6,14 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "coverage": "vitest run --coverage",
+    "lint": "next lint",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
+    "msw": "vite --host --mode development",
+    "tsc": "npx tsc --noEmit"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.55.0",
